--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,31 @@
 /* Google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');
 
-body {
-    font-family: "Inter", sans-serif;
+/* CSS ariables*/
+:root {
+    /*--variable-name; give them names that make sense regardless of value */
+    --primary-font: "Inter", sans-serif;
+    --secondary-font: "Macondo", cursive;
+    --primary-color: #3a2620; /* brown */
+    --secondary-color: #aa9581; /* tan */
+    --primary-highlight: #416a8e; /* blue */
+    --light-highlight: #7a9fc2; /* light blue */
 }
 
-h1 {
-    font-family: "Macondo", cursive;
+/* GLobal styles */
+body {
+    font-family: var(--primary-font);
 }
+
+h1,
+h2,
+h3 {
+    font-family: var(--secondary-font);
+    color: var(--primary-color);
+}
+
+.sub-heading-color {
+    color: var(--primary-highlight);
+}
+
+
