--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,11 @@ h3 {
     color: var(--primary-highlight);
 }
 
-.container, .row {
+/* .container, .row {
     border: 2px solid black;
 }
 
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
-}
+} */
