Add navigation bar to index and gallery, including styling and adding logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,15 @@ h3 {
     color: var(--primary-highlight);
 }
 
+/* Navbar styling */
+#navbar {
+    background-color: var(--primary-color);
+}
+
+#navbar .logo {
+    width: 30px;
+}
+
 /* .container, .row {
     border: 2px solid black;
 }
@@ -36,3 +45,4 @@ h3 {
     border: 2px solid white;
     background-color: lightgray;
 } */
+
