--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,11 @@ h3 {
     color: var(--primary-highlight);
 }
 
+.section {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
 /* Navbar styling */
 #navbar {
     background-color: var(--primary-color);
@@ -37,6 +42,13 @@ h3 {
 #navbar .logo {
     width: 30px;
 }
+
+/* Header */
+
+#header .lead {
+    font-family: var(--secondary-font);
+}
+
 
 /* .container, .row {
     border: 2px solid black;
