--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,15 @@ h2,
 h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
-    text-transform: uppercase;
+
+}
+
+h1, h2 {
+    text-transform: uppercase;   
+}
+
+h2 {
+    margin-bottom: 2rem;
 }
 
 .sub-heading-color {
@@ -49,7 +57,17 @@ h3 {
     font-family: var(--secondary-font);
 }
 
+/* services */
 
+#services .card-footer {
+    font-weight: bold;
+    color: var(--highlight-color);
+    background-color: transparent;
+}
+
+#services .card {
+    margin-bottom: 1.5rem;
+}
 /* .container, .row {
     border: 2px solid black;
 }
