--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,10 @@ h2 {
 #services .card {
     margin-bottom: 1.5rem;
 }
+
+
+
+
 /* .container, .row {
     border: 2px solid black;
 }
@@ -77,3 +81,34 @@ h2 {
     background-color: lightgray;
 } */
 
+/* Media query for tablets, 768px and up */
+@media screen and (min-width: 768px) {
+    /* Make all services cards the same size */
+    #services .card-body {
+        min-height: 191px;
+    }
+}
+
+/* Media query for large devices, 992px  and up */
+@media screen and (min-width: 992px) {
+    /* Make all services cards the same size */
+    #services .card-body {
+        min-height: auto;
+    }
+}
+
+/* Media query for larger devices, 1200px  and up */
+@media screen and (min-width: 1200px) {
+    /* Make all services cards the same size */
+    #services .card-body {
+        min-height: 220px;
+    }
+}
+
+/* Media query for extra devices, 1400px  and up */
+@media screen and (min-width: 1400px) {
+    /* Make all services cards the same size */
+    #services .card-body {
+        min-height: 195px;
+    }
+}
