--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,12 @@ h2 {
     color: var(--secondary-color);
 }
 
+#contact .table-dark * {
+    background-color: transparent;
+}
+
+
+
 /* .container, .row {
     border: 2px solid black;
 }
